[package]
name = "youtubezero"
version = "0.2.0"
authors = ["7ERr0r"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.12"
tokio = { version = "1.0", features = [
    "net",
    "fs",
    "io-std",
    "rt-multi-thread",
    "process",
] }
bytes = "1.1"
sha3 = "0.10"
hex = "0.4"
futures = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
rand = "0.8"
error-chain = "0.12"
clap = { version = "4", features = ["derive"] }
#zip = { version = "*", default-features = false, features = ["deflate"] }
derive_more = "0.99"
url = "2.2"
memchr = "2.5"
openssl = { version = "0.10", features = ["vendored"] }

regex = "1.6"

# required for extra features
nom = "7.1"
boa_engine = "0.18"
