[package]
name = "youtubezero"
version = "0.2.0"
authors = ["7ERr0r"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "*"
tokio = { version = "1.0", features = ["full"] }
bytes = "*"
hyper = "*"
anyhow = "*"
sha3 = "*"
hex = "*"
futures = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "1"
rand = "*"
error-chain = "*"
clap = { version = "*", features = ["derive"] }
zip = { version = "0.5", default-features = false, features = ["deflate"] }
derive_more = "*"
url = "*"
memchr = "*"
regex = "*"

# required for extra features
nom = "*"